M       vbm_io_writenii.m
M       vbm_plot_boxplot.m
M       vbm_qa_calcSTC.m
M       vbm_stat_marks.m
M       vbm_surf_createCS.m
D       vbm_tst_pre.m
M       vbm_tst_qa.m

(1)  Corrected affine registration error.
(2)  Changed vbm.opts.samp to 2 mm. 
(3)  Corrected small errors.
(4)  Updated primate vbm_defaults.
(5)  Removed prefix variable in  vbm_io_writenii.  
(6)  Update QA parameter.

------------------------------------------------------------------------
r665 | dahnke | 2014-12-10 13:51:37

M       CHANGES.txt
M       cg_check_cov.m
M       cg_showslice_all.m
M       cg_vbm_defaults.m
M       cg_vbm_longitudinal_batch.m
M       cg_vbm_longitudinal_batch.sh
M       cg_vbm_longitudinal_multi.m
M       cg_vbm_tools.m
M       html/vbm12.html
M       tbx_cfg_vbm.m
M       vbm_io_writenii.m
M       vbm_io_xml.m
M       vbm_plot_boxplot.m
M       vbm_surf_createCS.m

(1) Set debug to zero and solved issues with debug flag in vbm_surf_createCS.m.
(2) Corrected some typos in vbm_plot_boxplot.m and vbm_io_xml.m.
(3) vbm_io_writenii still had dartel options and extensions for writing data.
(4) Added many options to ch_check_cov to deal with different samples and
    to display quality measures in xml-files.
(5) Solved issue with 'GetWin' in cg_showslice_all.m.


------------------------------------------------------------------------
r666 | gaser | 2014-12-11 15:53:34

M       CHANGES.txt
M       cg_check_cov.m
MM      cg_vbm_longitudinal_batch.m
MM      cg_vbm_longitudinal_batch.sh
M       cg_vbm_tools.m
M       html/vbm12.html

Removed sample coding from cg_chek_cov.m and added option to sepcify different samples.


------------------------------------------------------------------------
r667 | gaser | 2014-12-12 10:19:59

M       CHANGES.txt
M       cg_check_cov.m
M       cg_vbm_tools.m
M       html/vbm12.html

Use simpler options in cg_check_cov.m.

------------------------------------------------------------------------
r668 | gaser | 2014-12-12 10:42:08